--- a/instalacin.html
+++ b/instalacin.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Instalación | ObjetoAprendizajeTesis </title>
+<title>Instalación | Objeto de Aprendizaje Tesis </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Alejandro Enríquez &amp; Doménica Merchán" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
